--- a/App/Views/LoginPage/login.html
+++ b/App/Views/LoginPage/login.html
@@ -7,23 +7,37 @@
         </div>
         <div class="form-login">
             <div class="form">
-                <form action="">
+                <form id="form-login">
                     <h1>Login</h1>
                     <div class ="container-email">
-                        <input id="inp-email" type="email" name="email" required/>
+                        <input id="inp-email" 
+                               type="email" 
+                               name="email" 
+                               required
+                         />
                         <label for="inp-email">E-mail</label>
                     </div>
                     <div class="container-senha">
-                        <input id="inp-senha" type="password" name="senha" required/>
+                        <input id="inp-senha" 
+                               type="password" 
+                               name="senha" 
+                               required
+                        />
                         <label for="inp-senha">Senha</label>
                     </div>
                     <div class="conectado">
-                        <input id="conectado" type="checkbox">
-                        <label id="label-conectado" for="conectado">Manter conectado</label>
+                        <input id="conectado" 
+                               type="checkbox">
+                        <label id="label-conectado" 
+                               for="conectado">
+                               Manter conectado
+                        </label>
                     </div>
                     
                     <div class="container-btn-entrar">
-                        <button id="btn-entrar">Entrar</button>
+                        <button id="btn-entrar">
+                            Entrar
+                        </button>
                     </div>
                 </form>
                 <div class="reset-senha">
