--- a/public/css/RegisterPageStyle/register.css
+++ b/public/css/RegisterPageStyle/register.css
@@ -12,11 +12,21 @@
 
             & .img-profile {
                 position: relative;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
                 margin-top: 50px;
                 margin-bottom: 50px;
     
                 & #img-user {
+                    /*width: 100px;*/
+                    border-radius: 50px;
                     width: 100px;
+                    height: 100px;
+                }
+
+                & #inp-img-profile {
+                    display: none;
                 }
 
                 & #edit-img {
@@ -297,11 +307,20 @@
 
             & .img-profile {
                 position: relative;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
                 margin-top: 50px;
                 margin-bottom: 50px;
     
                 & #img-user {
                     width: 100px;
+                    height: 100px;
+                    border-radius: 50px;
+                }
+
+                & #inp-img-profile {
+                    display: none;
                 }
 
                 & #edit-img {
@@ -584,11 +603,21 @@
 
             & .img-profile {
                 position: relative;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
                 margin-top: 50px;
                 margin-bottom: 50px;
     
                 & #img-user {
                     width: 100px;
+                    height: 100px;
+                    border-radius: 50px;
+                    box-shadow: 1px 1px 10px black;
+                }
+
+                & #inp-img-profile {
+                    display: none;
                 }
 
                 & #edit-img {
