--- a/public/css/StructurePagesStyle/structure.css
+++ b/public/css/StructurePagesStyle/structure.css
@@ -382,7 +382,76 @@
     
 
     .sandwich-hidden {
-        display: none;
+        background-color: #69707c;
+        box-shadow: 2px 2px 10px black;
+        position: absolute;
+        display: flex;
+        flex-direction: column;
+        height: 90px;
+        width: 200px;
+        padding-top: 20px;
+        top: 70px;
+        border-radius: 10px 0 0 10px;
+        z-index: 1;
+        right: -240px;
+        transition: .3s;
+    
+        & #light-dark-theme2 {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            position: absolute;
+            top: 15px;
+            left: 0;
+            width: 160px;
+            height: 40px;
+            background-color: transparent;
+            border: none;
+            margin-left: 22px;
+            padding-bottom: 10px;
+            padding-right: 20px;
+            border-bottom: 1px solid #9c9c9c;
+
+            & img {
+                width: 30px
+            }
+    
+            & .p-tema {
+                margin-left: 10px;
+                color: #fff;
+                font-size: 16px;
+            }
+        }
+    
+        & #user-profile2 {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            position: absolute;
+            background-color: transparent;
+            left: 0;
+            top: 60px;
+            width: 160px;
+            height: 40px;
+            border: none;
+            margin-left: 20px;
+
+            & img {
+                width: 30px;
+                padding-right: 125px;
+            }
+
+            & #link-user {
+                width: 160px;
+            }
+    
+            & .p-perfil {
+                margin-left: -117px;
+                color: #fff;
+                font-size: 16px;
+                z-index: 1;
+            }
+        }
     }
     .sandwich-light {
         background-color: #69707c;
@@ -671,7 +740,76 @@
     }
     */
     .sandwich-hidden {
-        display: none;
+        background-color: #69707c;
+        box-shadow: 2px 2px 10px black;
+        position: absolute;
+        display: flex;
+        flex-direction: column;
+        height: 90px;
+        width: 200px;
+        padding-top: 20px;
+        top: 70px;
+        border-radius: 10px 0 0 10px;
+        z-index: 1;
+        right: -220px;
+        transition: .3s;
+    
+        & #light-dark-theme2 {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            position: absolute;
+            top: 15px;
+            left: 0;
+            width: 160px;
+            height: 40px;
+            background-color: transparent;
+            border: none;
+            margin-left: 22px;
+            padding-bottom: 10px;
+            padding-right: 20px;
+            border-bottom: 1px solid #9c9c9c;
+
+            & img {
+                width: 30px
+            }
+    
+            & .p-tema {
+                margin-left: 10px;
+                color: #fff;
+                font-size: 16px;
+            }
+        }
+    
+        & #user-profile2 {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            position: absolute;
+            background-color: transparent;
+            left: 0;
+            top: 60px;
+            width: 160px;
+            height: 40px;
+            border: none;
+            margin-left: 20px;
+
+            & img {
+                width: 30px;
+                padding-right: 125px;
+            }
+
+            & #link-user {
+                width: 160px;
+            }
+    
+            & .p-perfil {
+                margin-left: -117px;
+                color: #fff;
+                font-size: 16px;
+                z-index: 1;
+            }
+        }
     }
     .sandwich-light {
         background-color: #69707c;
