--- a/App/Views/CortesPage/cortes.html
+++ b/App/Views/CortesPage/cortes.html
@@ -6,10 +6,10 @@
         <div class="carousel-principal"> 
             <div class="slider">
                 <div class="slides">
-                    <input type="radio" id="radio1" name="radio-buttons" value="inp1" checked/>
+                    <input type="radio" id="radio1" name="radio-buttons" value="inp1"/>
                     <input type="radio" id="radio2" name="radio-buttons" value="inp2"/>
                     <input type="radio" id="radio3" name="radio-buttons" value="inp3"/>
-                    <input type="radio" id="radio4" name="radio-buttons" value="inp4" />
+                    <input type="radio" id="radio4" name="radio-buttons" value="inp4" checked/>
                     <input type="radio" id="radio5" name="radio-buttons" value="inp5"/>
                     <input type="radio" id="radio6" name="radio-buttons" value="inp6"/>
                     <input type="radio" id="radio7" name="radio-buttons" value="inp7"/> 
@@ -172,26 +172,26 @@
         <div class="carousel-secundary">
             <div class="slider">
                 <div class="slides"> 
-                    <input type="radio" id="radio2-1" name="radio-buttons-2" value="inp1" checked>
-                    <input type="radio" id="radio2-2" name="radio-buttons-2" value="inp2">
-                    <input type="radio" id="radio2-3" name="radio-buttons-2" value="inp3">
-                    <input type="radio" id="radio2-4" name="radio-buttons-2" value="inp4">
-                    <input type="radio" id="radio2-5" name="radio-buttons-2" value="inp5">
-                    <input type="radio" id="radio2-6" name="radio-buttons-2" value="inp6">
-                    <input type="radio" id="radio2-7" name="radio-buttons-2" value="inp7">
-                    <input type="radio" id="radio2-8" name="radio-buttons-2" value="inp8">
-                    <input type="radio" id="radio2-9" name="radio-buttons-2" value="inp9">
-                    <input type="radio" id="radio2-10" name="radio-buttons-2" value="inp10">
-                    <input type="radio" id="radio2-11" name="radio-buttons-2" value="inp11">
-                    <input type="radio" id="radio2-12" name="radio-buttons-2" value="inp12">
-                    <input type="radio" id="radio2-13" name="radio-buttons-2" value="inp13">
-                    <input type="radio" id="radio2-14" name="radio-buttons-2" value="inp14">
-                    <input type="radio" id="radio2-15" name="radio-buttons-2" value="inp15">
-                    <input type="radio" id="radio2-16" name="radio-buttons-2" value="inp16">
-                    <input type="radio" id="radio2-17" name="radio-buttons-2" value="inp17">
-                    <input type="radio" id="radio2-18" name="radio-buttons-2" value="inp18">
-                    <input type="radio" id="radio2-19" name="radio-buttons-2" value="inp19">
-                    <input type="radio" id="radio2-20" name="radio-buttons-2" value="inp20">
+                    <input type="radio" id="radio2-1" name="radio-buttons-2" value="inp1"/>
+                    <input type="radio" id="radio2-2" name="radio-buttons-2" value="inp2"/>
+                    <input type="radio" id="radio2-3" name="radio-buttons-2" value="inp3"/>
+                    <input type="radio" id="radio2-4" name="radio-buttons-2" value="inp4"/>
+                    <input type="radio" id="radio2-5" name="radio-buttons-2" value="inp5"/>
+                    <input type="radio" id="radio2-6" name="radio-buttons-2" value="inp6"/>
+                    <input type="radio" id="radio2-7" name="radio-buttons-2" value="inp7"/>
+                    <input type="radio" id="radio2-8" name="radio-buttons-2" value="inp8"/>
+                    <input type="radio" id="radio2-9" name="radio-buttons-2" value="inp9"/>
+                    <input type="radio" id="radio2-10" name="radio-buttons-2" value="inp10" checked/>
+                    <input type="radio" id="radio2-11" name="radio-buttons-2" value="inp11"/>
+                    <input type="radio" id="radio2-12" name="radio-buttons-2" value="inp12"/>
+                    <input type="radio" id="radio2-13" name="radio-buttons-2" value="inp13"/>
+                    <input type="radio" id="radio2-14" name="radio-buttons-2" value="inp14"/>
+                    <input type="radio" id="radio2-15" name="radio-buttons-2" value="inp15"/>
+                    <input type="radio" id="radio2-16" name="radio-buttons-2" value="inp16"/>
+                    <input type="radio" id="radio2-17" name="radio-buttons-2" value="inp17"/>
+                    <input type="radio" id="radio2-18" name="radio-buttons-2" value="inp18"/>
+                    <input type="radio" id="radio2-19" name="radio-buttons-2" value="inp19"/>
+                    <input type="radio" id="radio2-20" name="radio-buttons-2" value="inp20"/>
 
                     <div class="slide first2 slide2-1"></div>
                     <div class="slide slide2-2"></div>
