--- a/App/Views/ProfilePage/profile.html
+++ b/App/Views/ProfilePage/profile.html
@@ -2,66 +2,172 @@
     <div class="container-profile">
         <div class="image-background-profile">
             <div class="img-profile">
-                <img id="img-user" src="public/img/user-black.png" alt="Usuário" title="Usuário">
+                <img id="img-user" 
+                     src="public/img/user-black.png" 
+                     alt="Usuário" 
+                     title="Usuário"
+                >
                 <button id="edit-img"> 
-                    <img src="public/img/lapis-color.png" alt="Editar" title="Editar">
+                    <img src="public/img/lapis-color.png" 
+                         alt="Editar"
+                         title="Editar"
+                    >
                 </button>
             </div>
         </div>
         <div class="container-title">
             <div class="title">
-                <h1>Bem-vindo Sr(a): Nome</h1>
+                <h1>Bem-vindo Sr(a): {{firstName}}</h1>
             </div>          
         </div>
         <div class="container-form-register">
             <div class="form-register">
                 <form id="form-edit-userdata">
                     <div class="message-hidden">
-                        <img src="public/img/verify.png" alt="Ok">
+                        <img src="public/img/verify.png" 
+                             alt="Ok">
                         <p>Dados alterados com sucesso.</p>
                     </div>
                     <div class="container-nome-dt-nascimento">
                         <div class="container-nome">
-                            <label for="inp-nome">Nome:</label>
-                            <input id="inp-nome" type="text" required disabled="disabled">                      
+                            <label for="inp-nome">
+                                Nome:
+                            </label>
+                            <input id="inp-nome" 
+                                   value="{{nome}}" 
+                                   type="text" 
+                                   required 
+                                   disabled="disabled"
+                            >                      
                         </div>
                         <div class="container-dt-nascimento">
-                            <label for="dt-nascimento">Nascimento:</label>
-                            <input id="dt-nascimento" type="date" required disabled>                           
+                            <label for="dt-nascimento">
+                                Nascimento:
+                            </label>
+                            <input id="dt-nascimento" 
+                                   value="{{dt_nascimento}}" 
+                                   type="date" 
+                                   required 
+                                   disabled
+                            >                           
                         </div>
                     </div>
                     <div class="container-emails">
                         <div class="container-email1">
-                            <label for="inp-email1">E-mail:</label>
-                            <input id="inp-email1" type="email" required disabled/>
+                            <label for="inp-email1">
+                                E-mail:
+                            </label>
+                            <input id="inp-email1" 
+                                   value="{{email}}" 
+                                   type="email" 
+                                   required 
+                                   disabled
+                            />
                         </div>
                         <div class="container-email2">
-                            <label for="inp-email2">Confirme o e-mail:</label>
-                            <input id="inp-email2" type="email" required disabled/>                    
+                            <label for="inp-email2">
+                                Confirme o e-mail:
+                            </label>
+                            <input id="inp-email2" 
+                                   value="{{email}}" 
+                                   type="email" 
+                                   required 
+                                   disabled
+                            />                    
                         </div>
                     </div>                
                     <div class="container-senhas">
                         <div class="container-senha1">
-                            <label for="senha1">Senha:</label>
-                            <input id="senha1" type="password" required disabled/>                         
+                            <label for="senha1">
+                                Senha:
+                            </label>
+                            <input id="senha1" 
+                                   type="password" 
+                                   required 
+                                   disabled
+                            />                         
                         </div>
                         <div class="container-senha2">
-                            <label for="senha2">Confirme a senha:</label>
-                            <input id="senha2" type="password" required disabled/>                        
+                            <label for="senha2">
+                                Confirme a senha:
+                            </label>
+                            <input id="senha2" 
+                                   type="password" 
+                                   required 
+                                   disabled
+                            />                        
                         </div>
                     </div>
                     <div class="info-emails">
-                        <input id="info" type="checkbox" disabled/>
-                        <label for="info">Desejo receber informações e promoções por e-mail.</label>
+                        <input id="info" 
+                               type="checkbox" 
+                               disabled
+                        />
+                        <label for="info">
+                            Desejo receber informações e promoções por e-mail.
+                        </label>
                     </div>
                     <div class="container-btns">
                         <div class="btn-clean-register">
-                            <button id="btn-clean" type="reset" disabled>Limpar</button>
-                            <button id="btn-edit" class="btn-edit" onclick="editUserData()" onload="defaultAttributesFormEditUserData()">Editar</button>
+                            <button id="btn-clean"                                    
+                                    onclick="resetForm()" 
+                                    disabled>
+                                    Limpar
+                            </button>
+                            <button id="btn-edit" 
+                                    class="btn-edit" 
+                                    onclick="editUserData()" 
+                                    onload="defaultAttributesFormEditUserData()">
+                                    Editar
+                            </button>
                         </div>
                     </div>
                 </form>
             </div>
+        </div>
+        <div class="agendamentos-salvos">
+            <table id="table-agendamentos">
+                <caption>Meus agendamentos</caption>
+                <tr>
+                    <th>Registro</th>
+                    <th>Data</th>
+                    <th>Horário</th>
+                    <th id="column-dia">Dia</th>
+                </tr>
+                <tr>
+                    <td>15/06/2024 - 23:13</td>
+                    <td>16/06/2024</td>
+                    <td>16:30</td>
+                    <td>
+                        Segunda-Feira
+                        <button class="btn-delete-agendamento">
+                            x
+                        </button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>22/04/2024 - 09:11</td>
+                    <td>14/04/2024</td>
+                    <td>18:00</td>
+                    <td>
+                        Quinta-Feira
+                        <button class="btn-delete-agendamento">
+                            x
+                        </button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>01/05/2024 - 13:30</td>
+                    <td>02/05/2024</td>
+                    <td>15:30</td>
+                    <td>
+                        Sábado
+                        <button class="btn-delete-agendamento">
+                            x
+                        </button>
+                    </td>
+                </tr>
+            </table>
         </div>
     </div>
 </main>
