--- a/public/css/LoginPageStyle/login.css
+++ b/public/css/LoginPageStyle/login.css
@@ -35,6 +35,49 @@
                 color: #fff;
             }
 
+            & .message-login {
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                background-color: rgb(219, 255, 216);
+                border-radius: 10px;
+                padding: 5px 0 5px 10px;
+                margin-top: 20px;
+                margin-bottom: 10px;
+
+                & img {
+                    width: 20px;
+                }
+                
+                & #message {
+                    color: rgb(6, 121, 6);
+                    margin: 0;
+                    margin-left: 10px;
+                    font-size: 14px;
+                }
+            }    
+            & .message-erro {
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                background-color: rgb(253, 183, 183);
+                border-radius: 10px;
+                padding: 5px 0 5px 10px;
+                margin-top: 20px;
+                margin-bottom: 10px;
+
+                & img {
+                    width: 20px;
+                }
+                
+                & #message {
+                    color: rgb(145, 22, 6);
+                    margin: 0;
+                    margin-left: 10px;
+                    font-size: 14px;
+                }
+            }
+
             & .container-email {
                 display: flex;
                 width: 100%;
