--- a/public/css/RegisterPageStyle/register.css
+++ b/public/css/RegisterPageStyle/register.css
@@ -6,6 +6,7 @@
 
         & .image-background-profile {
             width: 100%;
+            height: 105px;
             display: flex;
             justify-content: center;
             background-color: #cecece;
@@ -17,12 +18,17 @@
                 align-items: center;
                 margin-top: 50px;
                 margin-bottom: 50px;
+                height: 100px;
+                width: 100px;
+                
     
                 & #img-user {
                     /*width: 100px;*/
-                    border-radius: 50px;
+                    border-radius: 50%;
+                    object-fit: cover;                
                     width: 100px;
                     height: 100px;
+                    box-shadow: 1px 1px 10px black;
                 }
 
                 & #inp-img-profile {
@@ -83,6 +89,7 @@
                     background-color: rgb(219, 255, 216);
                     border-radius: 10px;
                     padding: 5px 0 5px 10px;
+                    margin-bottom: 10px;
 
                     & img {
                         width: 25px;
@@ -94,6 +101,25 @@
                         margin-left: 10px;
                     }
                 }    
+                & .message-erro {
+                    display: flex;
+                    flex-direction: row;
+                    align-items: center;
+                    background-color: rgb(253, 183, 183);
+                    border-radius: 10px;
+                    padding: 5px 0 5px 10px;
+                    margin-bottom: 10px;
+
+                    & img {
+                        width: 25px;
+                    }
+                    
+                    & #message {
+                        color: rgb(145, 22, 6);
+                        margin: 0;
+                        margin-left: 10px;
+                    }
+                }
 
                 & input {
                     height: 30px;
@@ -317,6 +343,7 @@
                     width: 100px;
                     height: 100px;
                     border-radius: 50px;
+                    box-shadow: 1px 1px 10px black;
                 }
 
                 & #inp-img-profile {
